src/components/Sidebar/Toolbar/Toolbar.scss
@mixin icon {
	color: var(--gh-lighter-grey);
	cursor: pointer;
	transition: all .2s;
	opacity: .8;

	&:hover {
		opacity: 1;
	}
}

.toolbar {
	display: flex;
	justify-content: space-between;
	padding: 0 var(--spacer-xxs);
	margin-bottom: var(--spacer-sm);
	// max-width: calc(250px - var(--spacer-sm) * 2);

	.selected-folder {
		height: 24px;
		font-size: var(--text-xs);
		color: var(--gh-lighter-grey-80);
		overflow: hidden;

		p {
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;
		}
	}

	.tools {
		display: flex;
		justify-content: flex-end;
		// flex-direction: row-reverse;
		gap: var(--spacer-xs);
	
		.icon {
			@include icon;
		}
	
		.toolbar-button {
			padding: 0;
			min-width: 0;
		}
	}
}

.dropdown-menu {
	color: var(--gh-lighter-grey-80);

	input {
		border: none;
		background: #1E1E1E;
		color: var(--gh-lighter-grey);

		&:focus-visible {
			border: none;
			outline: none;
		}
	}

	.MuiMenu-paper {
		background-color: #1E1E1E;
		color: var(--gh-lighter-grey);

		.menu-item {
			display: flex;
			justify-content: space-between;
			padding: var(--spacer-xs) var(--spacer-sm);

			.delete-confirm {
				flex-direction: column;
				justify-content: center;
				text-align: center;
				font-size: var(--text-sm);

				p {
					margin-bottom: var(--spacer-sm);
				}

				.file-to-delete {
					margin-bottom: var(--spacer-xs);

					p {
						margin-bottom: 0;
					}
				}

				.confirm-buttons {
					display: flex;
					gap: var(--spacer-sm);

					button {
						padding: var(--spacer-xxs) var(--spacer-xs);
						font-size: var(--text-xs);
					}
				}
			}
		}

		svg {
			color: var(--gh-lighter-grey);
		}

		hr {
			background: var(--gh-neutral-grey);
			margin: var(--spacer-xxs) 0;
		}

		.MuiListItemIcon-root {
			min-width: 30px;
		}
	}
}

